--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 <section id="Solicita-tu-prestamo" class="padding bglight">
 <div class="col-12 text-center">
-   <button class="button btnsecondary pagescroll" onclick="BancosAlPrestamo()"> ¡HACEME CLICK Y OBTENÉ TU PRÉSTAMO! </button>
+   <button id="BotonDePrestamo" class="button btnsecondary pagescroll" onclick="BancosAlPrestamo()"> ¡HACEME CLICK Y OBTENÉ TU PRÉSTAMO! </button>
 </div>
 </section>
 
